Missing semi-colon
Caused next script tag not to work

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
 				</div>
 			</div>
 			<div class="footer-credits"> <!-- Credits -->
-				<p>&#169 2018 The Sitting Duck Cafe | Developed by WLR</p>
+				<p>&#169; 2018 The Sitting Duck Cafe | Developed by WLR</p>
 			</div>	
 		</footer>
 		<script> <!-- Smooth Scrolling -->
