Update personal statement

--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
         <p class="lead">H.Dip. Computer Science, B.Eng. Chemical Engineering</p>
         <br>
         <p class="lead text-justify mx-auto font-italic">An enthusiastic graduate holding a First Class Honours HDip
-          degree in
-          Computer Science, coming from a Chemical Engineering background. Holds retail experience and has a proven
-          ability to manage time and prioritise tasks. Has balanced part-time jobs alongside studies over the last two
-          years. Now looking to secure a place on a post-graduate academic programme that will provide exposure to
-          advanced software development skills.</p>
+          degree in Computer Science, coming from a Chemical Engineering background. Holds retail experience and has a
+          proven ability to manage time and prioritise tasks. Has balanced part-time jobs alongside studies over the
+          last two years. Now looking to secure a place on a graduate programme that will provide exposure to software
+          development and career progression opportunities.</p>
       </div>
     </div>
   </main>
