Added gersgarage to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,32 @@
     </header>
     <main>
         <div class="container">
-            <table style="height: 400px;width: 100%">
-                <tbody>
-                    <tr>
-                        <td class="align-middle">Under construction</td>
-                    </tr>
-                </tbody>
-            </table>
+            <br>
+            <h1 class="font-inconsolata">College Projects</h1>
+            <br>
+            <div>
+                <table class="table text-left">
+                    <tbody>
+                        <tr class="clickable" onClick="toggle('gersgarage');">
+                            <td>
+                                <div>
+                                    <div class="font-weight-bold">Ger's Garage</div>
+                                    <div class="font-italic">
+                                        Final project (individual work)
+                                    </div>
+                                    <div id="gersgarage" style="display: none;">
+                                        <br>
+                                        Developed a Web application for a small fictitious garage that handles user
+                                        registering/login, bookings, rostering
+                                        and invoicing. Available <a
+                                            href="https://github.com/wellybean/gersgarage">here</a>.
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </main>
     <!--JavaScript-->
@@ -56,6 +75,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+    <script src="./js/my_scripts.js"></script>
 </body>
 
 </html>
