New formatting for portfolio entries

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,19 +44,30 @@
             <div>
                 <table class="table text-left">
                     <tbody>
-                        <tr class="clickable" onClick="toggle('gersgarage');">
+                        <tr>
                             <td>
                                 <div>
-                                    <div class="font-weight-bold">Ger's Garage</div>
-                                    <div class="font-italic">
-                                        Final project (individual work)
+                                    <div class="mb-2">
+                                        <span class="font-bold h4">Ger's Garage</span>
+                                        <br>
+                                    </div>
+                                    <div class="mb-2">
+                                        <span class="coloured-box bg-grey">Final project</span>
+                                        <span class="coloured-box bg-grey">Individual work</span>
+                                        <span class="coloured-box bg-blue">PHP</span>
+                                        <span class="coloured-box bg-blue">HTML</span>
+                                        <span class="coloured-box bg-blue">CSS</span>
+                                        <span class="coloured-box bg-blue">JavaScript</span>
+                                        <span class="coloured-box bg-blue">Bootstrap</span>
+                                        <span class="coloured-box bg-blue">SQLite</span>
+                                        <span class="coloured-box bg-orange clickable" onClick="toggle('gersgarage');">More info</span>
+                                        <a href="https://github.com/wellybean/gersgarage">
+                                            <span class="coloured-box bg-green">Available here</span></a>
                                     </div>
                                     <div id="gersgarage" style="display: none;">
-                                        <br>
                                         Developed a Web application for a small fictitious garage that handles user
                                         registering/login, bookings, rostering
-                                        and invoicing. Available <a
-                                            href="https://github.com/wellybean/gersgarage">here</a>.
+                                        and invoicing.
                                     </div>
                                 </div>
                             </td>
