Updated link to sitting duck website

--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
                         <td>
                             <div class="mb-2">
                                 <span class="font-bold h4">Sitting Duck cafe </span>
-                                <a href="https://github.com/wellybean/wellybean.github.io/resources/sitting-duck/index.html">
+                                <a href="https://wellybean.github.io/resources/sitting-duck/index.html">
                                     <span class="coloured-box bg-green">Available here</span></a>
                                 <div>
                                     Developed a responsive website for a cafe in Galway.
