Added CCTAir to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -110,6 +110,25 @@
                                 </div>
                             </td>
                         </tr>
+                        <!--CCTAir-->
+                        <tr>
+                            <td>
+                                <div class="mb-2">
+                                    <span class="font-bold h4">CCT Air </span>
+                                    <a href="https://github.com/wellybean/CCTAir">
+                                        <span class="coloured-box bg-green">Available here</span></a>
+                                    <div>
+                                        Developed program that manages flights for an airline. Handles unexpected user
+                                        input using try/catch blocks.
+                                    </div>
+                                </div>
+                                <div class="mb-2">
+                                    <span class="coloured-box bg-grey">Group work</span>
+                                    <span class="coloured-box bg-grey">Group leader</span>
+                                    <span class="coloured-box bg-blue">Java</span>
+                                </div>
+                            </td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
