Ipen research added to resources and link to it updated

--- a/resume.html
+++ b/resume.html
@@ -351,7 +351,7 @@
                                                 physical and chemical properties. Resulted in the publication of an
                                                 article in
                                                 the International Nuclear Atlantic Conference (available <a
-                                                    href="https://github.com/wellybean/wellybean.github.io/blob/master/other/IRRADIATED%20GELATIN-POTATO%20STARCH%20BLENDS.pdf">here</a>).
+                                                    href="https://github.com/wellybean/wellybean.github.io/resources/IRRADIATED%20GELATIN-POTATO%20STARCH%20BLENDS.pdf">here</a>).
 
                                             </li>
                                         </ul>
