New format resume

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="./css/my_styles.css">
     <title>Wellington Lopes Regis - Computer Science Graduate</title>
 </head>
@@ -39,105 +40,91 @@
     </header>
     <main>
         <div class="container">
-            <br>
-            <h1 class="font-inconsolata">College Projects</h1>
-            <br>
-            <!--College work-->
-            <div>
-                <table class="table text-left">
-                    <tbody>
-                        <!--Gers garage-->
-                        <tr>
-                            <td>
-                                <div class="mb-2">
-                                    <span class="font-bold h4">Ger's Garage </span>
-                                    <a href="https://github.com/wellybean/gersgarage">
-                                        <span class="coloured-box bg-green">Available here</span></a>
-                                    <div>
-                                        Developed a Web application for a small fictitious garage that handles user
-                                        registering/login, bookings, rostering
-                                        and invoicing.
-                                    </div>
+            <table class="table text-left">
+                <tbody>
+                    <!--Gers garage-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">Ger's Garage </span>
+                                <a href="https://github.com/wellybean/gersgarage">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Developed a Web application for a small fictitious garage that handles user
+                                    registering/login, bookings, rostering
+                                    and invoicing.
                                 </div>
-                                <div class="mb-2">
-                                    <span class="coloured-box bg-grey">Final project</span>
-                                    <span class="coloured-box bg-grey">Individual work</span>
-                                    <span class="coloured-box bg-blue">PHP</span>
-                                    <span class="coloured-box bg-blue">HTML</span>
-                                    <span class="coloured-box bg-blue">CSS</span>
-                                    <span class="coloured-box bg-blue">JavaScript</span>
-                                    <span class="coloured-box bg-blue">Bootstrap</span>
-                                    <span class="coloured-box bg-blue">SQLite</span>
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-grey">Final project</span>
+                                <span class="coloured-box bg-grey">Individual work</span>
+                                <span class="coloured-box bg-blue">PHP</span>
+                                <span class="coloured-box bg-blue">HTML</span>
+                                <span class="coloured-box bg-blue">CSS</span>
+                                <span class="coloured-box bg-blue">JavaScript</span>
+                                <span class="coloured-box bg-blue">Bootstrap</span>
+                                <span class="coloured-box bg-blue">SQLite</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <!--AndroidsRus-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">AndroidsRus </span>
+                                <a href="https://github.com/wellybean/androidsRus">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Developed program that generates robots with tracked parts that are
+                                    then scavenged to build a new line of robots following certain restrictions.
+                                    Menu allows for retrieval of data and statistics.
                                 </div>
-                            </td>
-                        </tr>
-                        <!--AndroidsRus-->
-                        <tr>
-                            <td>
-                                <div class="mb-2">
-                                    <span class="font-bold h4">AndroidsRus </span>
-                                    <a href="https://github.com/wellybean/androidsRus">
-                                        <span class="coloured-box bg-green">Available here</span></a>
-                                    <div>
-                                        Developed program that generates robots with tracked parts that are
-                                        then scavenged to build a new line of robots following certain restrictions.
-                                        Menu allows for retrieval of data and statistics.
-                                    </div>
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-grey">Individual work</span>
+                                <span class="coloured-box bg-blue">Java</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <!--Pokemon Hotel-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">Pokemon Hotel </span>
+                                <a href="https://github.com/wellybean/College-projects/tree/master/PokemonHotel">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Developed program that generates random pokemons, hotel rooms and hotel
+                                    assistants each with their own characteristics, and then attempts to accommodate
+                                    as many pokemons as possible depending on restrictions given.
                                 </div>
-                                <div class="mb-2">
-                                    <span class="coloured-box bg-grey">Individual work</span>
-                                    <span class="coloured-box bg-blue">Java</span>
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-grey">Group work</span>
+                                <span class="coloured-box bg-grey">Group leader</span>
+                                <span class="coloured-box bg-blue">Java</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <!--CCTAir-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">CCT Air </span>
+                                <a href="https://github.com/wellybean/CCTAir">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Developed program that manages flights for an airline. Handles unexpected user
+                                    input using try/catch blocks.
                                 </div>
-                            </td>
-                        </tr>
-                        <!--Pokemon Hotel-->
-                        <tr>
-                            <td>
-                                <div class="mb-2">
-                                    <span class="font-bold h4">Pokemon Hotel </span>
-                                    <a href="https://github.com/wellybean/College-projects/tree/master/PokemonHotel">
-                                        <span class="coloured-box bg-green">Available here</span></a>
-                                    <div>
-                                        Developed program that generates random pokemons, hotel rooms and hotel
-                                        assistants each with their own characteristics, and then attempts to accommodate
-                                        as many pokemons as possible depending on restrictions given.
-                                    </div>
-                                </div>
-                                <div class="mb-2">
-                                    <span class="coloured-box bg-grey">Group work</span>
-                                    <span class="coloured-box bg-grey">Group leader</span>
-                                    <span class="coloured-box bg-blue">Java</span>
-                                </div>
-                            </td>
-                        </tr>
-                        <!--CCTAir-->
-                        <tr>
-                            <td>
-                                <div class="mb-2">
-                                    <span class="font-bold h4">CCT Air </span>
-                                    <a href="https://github.com/wellybean/CCTAir">
-                                        <span class="coloured-box bg-green">Available here</span></a>
-                                    <div>
-                                        Developed program that manages flights for an airline. Handles unexpected user
-                                        input using try/catch blocks.
-                                    </div>
-                                </div>
-                                <div class="mb-2">
-                                    <span class="coloured-box bg-grey">Group work</span>
-                                    <span class="coloured-box bg-grey">Group leader</span>
-                                    <span class="coloured-box bg-blue">Java</span>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <br>
-            <h1 class="font-inconsolata">Web development</h1>
-            <br>
-            <!--Webdev-->
-            <div>
-                <table class="table text-left">
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-grey">Group work</span>
+                                <span class="coloured-box bg-grey">Group leader</span>
+                                <span class="coloured-box bg-blue">Java</span>
+                            </div>
+                        </td>
+                    </tr>
                     <tr>
                         <td>
                             <div class="mb-2">
@@ -157,8 +144,9 @@
                             </div>
                         </td>
                     </tr>
-                </table>
-            </div>
+                </tbody>
+            </table>
+        </div>
         </div>
     </main>
     <!--JavaScript-->
