Color correction for previous commit

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,9 @@
     </header>
     <main>
         <div class="container">
-            <table class="table text-left">
+            <table class="table text-left mt-3">
                 <tbody>
+
                     <!--Gers garage-->
                     <tr>
                         <td>
