--- a/resume.html
+++ b/resume.html
@@ -68,8 +68,8 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('cct');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
-                                        id="cct" style="display: none;">
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="cct"
+                                        style="display: none;">
                                         Awarded a First Class Honours degree (7.4/10)
                                         <br>
                                         <br>
@@ -111,7 +111,7 @@
                                         <div class="d-flex align-items-center mx-3 clickable"
                                             onClick="toggle('bridge');"><i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="bridge" style="display: none;">
                                         Certifications received:
                                         <ul>
@@ -144,8 +144,8 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('usp');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
-                                        id="usp" style="display: none;">
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="usp"
+                                        style="display: none;">
                                         Final average: 7.4/10
                                         <br>
                                         <br>
@@ -201,7 +201,7 @@
                                             onClick="toggle('tiger');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="tiger" style="display: none;">
                                         <ul>
                                             <li>Analyse sales data in order to strategically merchandise the shop and
@@ -237,7 +237,7 @@
                                             onClick="toggle('callarock');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="callarock" style="display: none;">
                                         <ul>
                                             <li>Developed a responsive web page for one of Callarock’s subsidiaries
@@ -274,7 +274,7 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('ecig');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="ecig" style="display: none;">
                                         <ul>
                                             <li>Improved my soft skills considerably (in special communication,
@@ -309,7 +309,7 @@
                                             onClick="toggle('clark');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="clark" style="display: none;">
                                         <ul>
                                             <li>
@@ -344,8 +344,8 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('lea');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
-                                        id="lea" style="display: none;">
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="lea"
+                                        style="display: none;">
                                         <ul>
                                             <li>
                                                 Analysis of the anticorrosive properties of a then new paint that was
@@ -385,7 +385,7 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('ipen');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-light-grey px-4 pt-3 pb-2 font-weight-bold"
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="ipen" style="display: none;">
                                         <ul>
                                             <li>
