--- a/resume.html
+++ b/resume.html
@@ -68,8 +68,8 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('cct');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="cct"
-                                        style="display: none;">
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="cct" style="display: none;">
                                         Awarded a First Class Honours degree (7.4/10)
                                         <br>
                                         <br>
@@ -203,6 +203,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="tiger" style="display: none;">
+                                        Duties include:
                                         <ul>
                                             <li>Analyse sales data in order to strategically merchandise the shop and
                                                 hence increase daily takings.</li>
@@ -239,6 +240,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="callarock" style="display: none;">
+                                        Achievements:
                                         <ul>
                                             <li>Developed a responsive web page for one of Callarock’s subsidiaries
                                                 (Available in page 'Portfolio').</li>
@@ -276,6 +278,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="ecig" style="display: none;">
+                                        Achievements:
                                         <ul>
                                             <li>Improved my soft skills considerably (in special communication,
                                                 collaboration and time management skills) following advice from
@@ -311,6 +314,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="clark" style="display: none;">
+                                        Duties included:
                                         <ul>
                                             <li>
                                                 Used and updated company software (mainly MATLAB and VBA) for designing
@@ -346,6 +350,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="lea"
                                         style="display: none;">
+                                        Duties included:
                                         <ul>
                                             <li>
                                                 Analysis of the anticorrosive properties of a then new paint that was
@@ -387,6 +392,7 @@
                                     </div>
                                     <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
                                         id="ipen" style="display: none;">
+                                        Duties & achievements:
                                         <ul>
                                             <li>
                                                 Irradiation of gelatin and potato starch based biofilms for the study of
