Added time formatter app

--- a/portfolio.html
+++ b/portfolio.html
@@ -126,6 +126,32 @@
                             </div>
                         </td>
                     </tr>
+                    <!--Time formatter-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">Time Formatter </span>
+                                <a href="https://https://github.com/wellybean/timeFormatter">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Simple Java Spring application that receives a timestamp and converts it into ISO
+                                    and UTC dates.
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-grey">Individual work</span>
+                                <span class="coloured-box bg-blue">Java</span>
+                                <span class="coloured-box bg-blue">Spring</span>
+                                <span class="coloured-box bg-blue">JSON</span>
+                                <span class="coloured-box bg-blue">REST API's</span>
+                                <span class="coloured-box bg-blue">HTML</span>
+                                <span class="coloured-box bg-blue">CSS</span>
+                                <span class="coloured-box bg-blue">JavaScript</span>
+                                <span class="coloured-box bg-blue">Bootstrap</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <!--Callarock-->
                     <tr>
                         <td>
                             <div class="mb-2">
