Correction link time formatter

--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,7 @@
                         <td>
                             <div class="mb-2">
                                 <span class="font-bold h4">Time Formatter </span>
-                                <a href="https://https://github.com/wellybean/timeFormatter">
+                                <a href="https://github.com/wellybean/timeFormatter">
                                     <span class="coloured-box bg-green">Available here</span></a>
                                 <div>
                                     Simple Java Spring application that receives a timestamp and converts it into ISO
