--- a/resume.html
+++ b/resume.html
@@ -68,8 +68,8 @@
                                         <div class="d-flex align-items-center mx-3 clickable" onClick="toggle('cct');">
                                             <i class="material-icons">more_vert</i></div>
                                     </div>
-                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
-                                        id="cct" style="display: none;">
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold" id="cct"
+                                        style="display: none;">
                                         Awarded a First Class Honours degree (7.4/10)
                                         <br>
                                         <br>
@@ -165,6 +165,86 @@
                                             mobility scheme by the Brazilian Government granted to students with
                                             academic excellence).<br><br>
                                         </div>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <br>
+            <h1 class="font-inconsolata">Online Courses</h1>
+            <br>
+            <div>
+                <table class="table text-left">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-start">
+                                            <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/coursera.jpg"
+                                                    width="70px">
+                                            </div>
+                                            <div>
+                                                <div class="font-weight-bold">
+                                                    Using Python to Interact with the Operating System <br>
+                                                    Taught by Google
+                                                </div>
+                                                <div class="font-italic">
+                                                    Certificate earned at Sunday, February 23, 2020 5:45 PM GMT (available <a href="https://coursera.org/share/b79906b29e07ff2f526b29242aa36577">here</a>)
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center mx-3 clickable"
+                                            onClick="toggle('coursera1');">
+                                            <i class="material-icons">more_vert</i></div>
+                                    </div>
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="coursera1" style="display: none;">
+                                        Syllabus:
+                                        <ul>
+                                            <li>Managing files with Python</li>
+                                            <li>Manging CSV files</li>
+                                            <li>Regular expressions</li>
+                                            <li>Managing Data and Processes</li>
+                                            <li>Testing in Python</li>
+                                            <li>Bash Scripting</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div>
+                                    <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-start">
+                                            <div class="ml-2 mr-4 d-flex align-items-center"><img src="img/coursera.jpg"
+                                                    width="70px">
+                                            </div>
+                                            <div>
+                                                <div class="font-weight-bold">
+                                                    Crash Course on Python <br>
+                                                    Taught by Google
+                                                </div>
+                                                <div class="font-italic">
+                                                    Certificate earned at Wednesday, February 5, 2020 11:19 PM GMT (available <a href="https://coursera.org/share/9166cd5054b95c189b500f739d899c98">here</a>)
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex align-items-center mx-3 clickable"
+                                            onClick="toggle('coursera2');"><i class="material-icons">more_vert</i></div>
+                                    </div>
+                                    <div class="mx-2 mt-3 coloured-box bg-grey px-4 pt-3 pb-2 font-weight-bold"
+                                        id="coursera2" style="display: none;">
+                                        Syllabus:
+                                        <ul>
+                                            <li>Basic Python Syntax</li>
+                                            <li>Loops</li>
+                                            <li>Strings, Lists and Dictionaries</li>
+                                            <li>Object Oriented Programming</li>
+                                        </ul>
                                     </div>
                                 </div>
                             </td>
