Added expense tracker to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,28 @@
         <div class="container">
             <table class="table text-left mt-3">
                 <tbody>
-
+                    <!--Expenses Tracker-->
+                    <tr>
+                        <td>
+                            <div class="mb-2">
+                                <span class="font-bold h4">Expenses Tracker </span>
+                                <a href="https://github.com/wellybean/Expenses-app">
+                                    <span class="coloured-box bg-green">Available here</span></a>
+                                <div>
+                                    Application made for learning puposes following Siamak's tutorial "React & Spring
+                                    Boot Expense Tracker Application" on his Youtube Channel Code Engine (Available <a
+                                        href="https://www.youtube.com/watch?v=avvrsnYFXIE"><span
+                                            class="font-weight-bold">here</span></a>).
+                                </div>
+                            </div>
+                            <div class="mb-2">
+                                <span class="coloured-box bg-blue">Springboot</span>
+                                <span class="coloured-box bg-blue">Maven</span>
+                                <span class="coloured-box bg-blue">React.js</span>
+                                <span class="coloured-box bg-blue">Bootstrap</span>
+                            </div>
+                        </td>
+                    </tr>
                     <!--Gers garage-->
                     <tr>
                         <td>
